# AVRCMakeTemplateProject

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: buildCounter.cmake  compilerOptions.cmake  mcuOptions.cmake  printInfo.cmake  projectStructure.cmake
libraries/: CMakeLists.txt
libraries/uart/: uart.cpp
resources/: version.h.in
utilities/: CMakeLists.txt  blink.cpp  blink.h  wait.cpp  wait.h
